* Mon Jun 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.4.0
- Add RockyLinux 8 support

* Sat Jan 22 2022 Dan Barr <drb45@arl.psu.edu> - 0.3.1
- Update DoD banner text

* Wed Jun 16 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.3.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Tue Jan 28 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.2.0
- Remove all OS support statements from metadata.json since this is simply a
  data-only module

* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 0.2.0
- Drop Puppet 4 support
- Add Puppet 6 support
- Add puppetlabs-stdlib 6 support

* Tue Jul 23 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.1.2
- Remove unnecessary ``data_provider`` key in the metadata.json file.

* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.1.1
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Wed Jun 27 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.0
- First release